--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <img src="./assets/Group.png" alt="">
             <h2>"In the near future, I hope to become a Developer."</h2>
-            <p>This is my first assignment web Development. so I try it so much</p>
+            <p>This is my first assignment web Development. so I try it so much.</p>
             <a href="#footer"> <button>Contact with me</button></a>
         </div>
 
@@ -24,14 +24,14 @@
 
             <div class="why-head">
                 <h1>Why Web Development?</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>Since it is easy to learn to me.So I am interest web Development.</p>
             </div>
             <div class="all">
                 <div class="style">
 
                     <div class="size">
                         <h3>I will Do Coding and Change The World</h3>
-                        <p>I wil be try my best in this course</p>
+                        <p>I wil be try my best in this course.</p>
                         <button> Learn More</button>
                     </div>
                     <img src="./assets/Layer_1.png" alt="">
@@ -40,7 +40,7 @@
                     <img src="./assets/Group 3.png" alt="">
                     <div class="size">
                         <h3>I will help People by creating Modern Web System</h3>
-                        <p>Being a web Developer is very hard</p>
+                        <p>Being a web Developer is very hard.</p>
                         <button>Learn More</button>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
 
                     <div class="size">
                         <h3>I will Do Coding and Change The World</h3>
-                        <p>I will be a Developer</p>
+                        <p>I will be a Developer.</p>
                         <button>Learn More
                         </button>
                     </div>
@@ -59,7 +59,7 @@
         <section class="video-title">
             <div>
                 <h2>My inspiration</h2>
-                <p>programmer hero is my inspiration so thank you for your team support</p>
+                <p>programmer hero is my inspiration so thank you for your team support.</p>
             </div>
         </section>
         <section>
@@ -72,7 +72,7 @@
             <div>
                 <div class="middle">
                     <h1>My current target</h1>
-                    <p>My current target is web Developer</p>
+                    <p>My current target is web Developer.</p>
 
                 </div>
                 <div class="target-flex">
@@ -86,13 +86,13 @@
                     <div class="target-container color2">
                         <img src="./assets/css.png" alt="">
                         <h2>CSS</h2>
-                        <p>css full meaning cascading style sheet</p>
+                        <p>css full meaning cascading style sheet.</p>
                         <a href="">Learn More</a>
                     </div>
                     <div class="target-container color3">
                         <img src="./assets/js.png" alt="">
                         <h2>JavaScript</h2>
-                        <p>Javascript is a scripting Language</p>
+                        <p>Javascript is a scripting Language.</p>
                         <a href="">Learn More</a>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
         </section>
         <section class="support">
             <h2>I need support</h2>
-            <p>please alway help me</p>
+            <p>please alway help me.</p>
             <div class="line">
                 <input type="text" placeholder="suggest me any feedback for me">
                 <button>Submit</button>
